[JBWS-2437] WSDL access url with resource suffix allows any arbitrary xml file to be viewed
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@8959 50344849-fb0f-0410-a53f-a94597aac05c